# uni-dash

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: set-app-icon.toml
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  ContextMenu.tsx  FileIcon.tsx  LoginScreen.tsx  Modal.tsx  PinOverlay.tsx  Sidebar.test.tsx  Sidebar.tsx
src/hooks/: useAccentColor.ts  useAppIcon.ts  useAppName.ts  useAuth.ts  useBackup.ts  useDocuments.ts  useEvents.ts  useLinks.ts  useNotifications.ts  usePomodoro.ts  useStats.test.ts  useStats.ts  useTheme.ts  useTodos.test.ts  useTodos.ts
src/lib/: calendar.test.ts  calendar.ts  crypto.test.ts  crypto.ts  storage.ts
src/sections/: Calendar.tsx  Dashboard.tsx  Documents.tsx  Pomodoro.tsx  QuickLinks.tsx  Settings.tsx  Todos.tsx
