[package]
name = "uni-dash"
version = "1.0.6"
edition = "2021"

[lib]
name = "uni_dash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2"
